kubernetes/apps/security/wazuh-system/wazuh-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: wazuh-dashboard-ingress
 namespace: wazuh-system
 annotations:
#    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
#    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
   external-dns/is-public: "false"
   external-dns.alpha.kubernetes.io/target: "ipv4.samcloud.online"
spec:
 ingressClassName: "internal"
 rules:
   - host: "wazuh-dashboard.samcloud.online"
     http:
       paths:
         - pathType: Prefix
           path: /
           backend:
             service:
               name: wazuh-dashboard-svc
               port:
                 number: 80
 tls:
   - hosts:
       - "wazuh-dashboard.samcloud.online"
